force-app/main/default/objects/AccountContactRelation/fields/LPCR_AccountIdExterne__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AccountIdExterne__c</fullName>
    <description>Id Externe qui identifient les comptes</description>
    <label>Id externe compte crèche</label>
    <length>25</length>
    <type>Text</type>
</CustomField>