force-app/main/default/objects/AccountContactRelation/fields/LPCR_Facture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Facture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facturé</label>
    <type>Checkbox</type>
</CustomField>