force-app/main/default/objects/AccountContactRelation/fields/LPCR_IdExterne_Contact__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Contact__c</fullName>
    <description>Id Externe qui identifient les contact collaborateur</description>
    <label>Id externe contact collaborateur</label>
    <length>25</length>
    <type>Text</type>
</CustomField>